# django-bolt-test

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  ruff_check.py
accounts/: api.py  schemas.py  urls.py
api/: __init__.py  openapi_config.py
api/routes/: __init__.py  health.py
api_drf/: __init__.py  serializers.py
config/: api.py  middleware.py  settings.py  urls.py
loadtest/: README.md  main.go
scripts/: load_test.py
src/: __init__.py  config.py  database.py  main.py  middleware.py
src/routers/: __init__.py  health.py  roles.py  users.py
src/schemas/: __init__.py  health.py  roles.py  users.py
tests/: test_health.py  test_load.py
